# Calculadora_Meu_bess

backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  schemas.py
backend/app/calculate/: router.py  schemas.py  service.py
backend/app/catalog/: models.py  router.py  schemas.py  service.py
backend/app/engines/: bess.py  compatibility.py  schemas.py  solar.py  solar_strings.py
backend/app/projects/: models.py  router.py  schemas.py  service.py
backend/app/shared/: ploomes.py
backend/migrations/: 001_initial_schema.sql  002_add_max_baterias.sql  003_standard_loads_new_fields.sql  004_products_bess_eps_comercial.sql  005_seed_standard_loads.sql  006_seed_catalog_products.sql  007_solar_mppt_fields.sql
backend/scripts/: import_cargas_excel.py
backend/tests/: test_calculate_unit.py  test_engine_bess.py  test_engine_compatibility.py  test_engine_solar.py
docs/plans/: 2026-04-17-backup-arbitrage-engines.md
docs/superpowers/plans/: 2026-04-20-excel-engine-catalog.md  2026-04-24-solar-backup-dimensioning.md
docs/superpowers/specs/: 2026-04-20-excel-engine-catalog-design.md  2026-04-24-solar-backup-dimensioning-design.md
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vercel.json  vite.config.ts
frontend/scripts/: generate_irradiacao.py
frontend/src/: App.tsx  pages.rar
frontend/src/components/: AdminRoute.tsx  CityCombobox.tsx  Layout.tsx  ProtectedRoute.tsx
(+14 files in other folders)
